Fix about us page photo cropping on mobile
- Reverted navigation logo margins to center position (margin-left: 0px)
- Fixed about us photo cropping by changing from object-fit: cover to object-fit: contain
- Changed object-position from 50% 20%/15% to center for full photo visibility
- Photo now shows in full without cropping on mobile devices
- Maintains proper spacing with margin-top adjustments

--- a/css/hard-feelings-tacos.webflow.css
+++ b/css/hard-feelings-tacos.webflow.css
@@ -607,7 +607,7 @@
   }
   
   .nav-logo {
-    margin-left: -20px;
+    margin-left: 0px;
   }
 }
 
@@ -630,7 +630,7 @@
   }
   
   .nav-logo {
-    margin-left: -30px;
+    margin-left: 0px;
   }
 }
 
@@ -2432,7 +2432,8 @@
   }
 
   .about-us-inner-container {
-    object-position: 50% 20%;
+    object-fit: contain;
+    object-position: center;
     width: 100%;
     height: 400px;
     overflow: visible;
@@ -2660,7 +2661,8 @@
 
   .about-us-inner-container {
     height: 280px;
-    object-position: 50% 15%;
+    object-fit: contain;
+    object-position: center;
     margin-top: 110px;
   }
 
